@@ -889,19 +889,20 @@ help Rehash {
 	" Prompts the server to reread the configuration files.";
 	" IRC Operator only command.";
 	" -";
-	" Syntax: REHASH <servername> -<flags>";
-	"         REHASH -<flags>";
+	" Syntax: REHASH <servername> <flag>";
+	"         REHASH <flag>";
 	" -";
 	" If servername and flags are not specified this rehashes the";
-	" unrealircd.conf , removing any temporary k:lines.";
-	" If servername is specified, this is used to rehash config files on servername.";
+	" unrealircd.conf, and re-reads all MOTD, BOTMOTD, OPERMOTD and RULES files.";
+	" If servername is specified, this is used to rehash the remote server.";
 	" Only NetAdmins may specify a server name.";
 	" -";
 	" The flags are used to rehash other config files, valid flags are:";
-	"  -motd     - Rehashes all MOTD files and RULES files (including tld{})";
-	"  -opermotd - Rehashes the OPERMOTD";
-	"  -botmotd  - Rehashes the BOTMOTD";
+	"  -dns      - Reinitializes and reloads the resolver";
 	"  -garbage  - Force garbage collection";
+	"  -motd     - Only re-read all MOTD, BOTMOTD, OPERMOTD and RULES files";
+	"              (including those in tld{} blocks)";
+	"  -ssl      - Reloads SSL certificates";
 };
 
 help Restart {
